--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -116,11 +116,47 @@ span
 .cursor-blink
   animation: blink 1s step-end infinite
 
-.slideshow-container
-  display: flex
+.lds-ripple
+  display: inline-block
+  position: relative
+  width: 80px
+  height: 80px
 
-.slide
-  opacity: 0
-  transition: opacity 0.5s ease-in-out
-  &.active
+.lds-ripple div
+  position: absolute
+  border: 4px solid #fff
+  opacity: 1
+  border-radius: 50%
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite
+
+  &:nth-child(2)
+    animation-delay: -0.5s
+
+@keyframes lds-ripple
+  0%
+    top: 36px
+    left: 36px
+    width: 0
+    height: 0
+    opacity: 0
+
+  4.9% 
+    top: 36px
+    left: 36px
+    width: 0
+    height: 0
+    opacity: 0
+
+  5%
+    top: 36px
+    left: 36px
+    width: 0
+    height: 0
     opacity: 1
+
+  100%
+    top: 0px
+    left: 0px
+    width: 72px
+    height: 72px
+    opacity: 0
