--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -2,6 +2,7 @@
 @tailwind components
 @tailwind utilities
 @import 'fades'
+@import 'navs'
 
 :root
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif
