added another tool

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -163,3 +163,7 @@ span
     width: 72px
     height: 72px
     opacity: 0
+
+.transition-opacity
+  transition-property: opacity
+  transition-duration: 3s
