--- a/src/styles/fades.sass
+++ b/src/styles/fades.sass
@@ -44,3 +44,11 @@
     &.active
         opacity: 1
         transform: translateY(0)
+
+.nav-fade-in
+    opacity: 0
+    transform: translateX(-20px)
+    transition: opacity 3s ease-in-out, transform 0.5s ease-in-out
+    &.active
+        opacity: 1
+        transform: translateX(0)
